minor overfill bug and removal of tabular style infrastructure in .cls

--- a/kirkwood-donavin-resume.tex
+++ b/kirkwood-donavin-resume.tex
@@ -109,7 +109,7 @@ models, testing alternate algorithms, and integrating data embeddings to improve
 \dates{Jun 2019 -- 3 yrs 3 mos}
 \location{Salt Lake City, UT}
 \begin{position}
-	Supplied analytics and statistical consulting for OSTK's internal search, sponsored products, and recommendations teams
+	\sloppy Supplied analytics and statistical consulting for OSTK's internal search, sponsored products, and recommendations teams \par
 
 	\textbf{Key Accomplishments:}
 	\begin{itemize}
