--- a/ALT/kirkwood-donavin-resume-sport.tex
+++ b/ALT/kirkwood-donavin-resume-sport.tex
@@ -1,10 +1,12 @@
-\documentclass[resmargin, centered, 10pt]{res}
+\documentclass[resmargin, centered, 10pt]{../res}
 %Packages
 	\usepackage{array,ragged2e} %Tabular formating
 	\usepackage[pdfpagemode=FullScreen, colorlinks=true, linkcolor=black,  urlcolor=black]{hyperref} 
 	\usepackage{fancyhdr}
 	\usepackage[margin=1c m]{geometry}
-	\usepackage[none]{hyphenat} %To stop hyphenation
+	% allow hyphenation (was disabled)
+	% \usepackage[none]{hyphenat} %To stop hyphenation
+	\usepackage{enumitem}
 	\usepackage{multicol}
 	\usepackage{printlen} %for printing measurements
 	\usepackage{xcolor}
@@ -25,17 +27,17 @@
 
 	\newcommand{\tab}[1][1cm]{\hspace*{#1}} 
 	\newcommand{\bref}[2]{\href{#1}{\color{black}\underline{\smash{#2}}}} %custom link command
-	\newcommand{\loose}{\vspace{0.5cm}}
-	\newcommand{\tight}{\vspace{-0.25cm}}
-	\newcommand{\tighter}{\vspace{-0.75cm}}
+	\newcommand{\loose}{\vspace{0.35cm}}
+	\newcommand{\tight}{\vspace{-0.15cm}}
+	\newcommand{\tighter}{\vspace{-0.5cm}}
 	\newcommand{\subtext}[1]{\tab[0.5cm] \parbox{\dimexpr\fullwidth-0.5cm\relax}{#1}}
 	\newcommand{\subtitle}[1]{\vspace{-1cm} ~ \newline  \emph{\subtext{#1}}}
 	
 \begin{document}
 \name{
-	KIRKWOOD P. DONAVIN -- DATA SCIENTIST
+	KIRKWOOD P. DONAVIN -- EDUCATOR
 }
-\tagline{XGBoost \& Ensemble Methods, Natural Language Processing, Time-Series Forecasting}
+% \tagline{Former data scientist -- Passionate about mathematics \& education}
 \address{
 	\begin{centering}
 		\begin{tabular}{c | c | c | c}
@@ -47,119 +49,88 @@
 }
 
 \begin{resume}
-	
+% tighten itemize spacing
+\setlist[itemize]{noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt}
+% slightly reduce font size for the resume body to help fit on one page
+\small
+    
 \fullline
 
 \section{SUMMARY}
 
-Data Scientist with 9+ years of professional experience solving complex problems and creating deep insights via machine learning and statistical analyses. Proven track record in optimizing
-models, testing alternate algorithms, and integrating data embeddings to improve prediction accuracy and performance. Works well independently and in teams with strong written \& oral communication ability, and is a precise and talented coder.
+Former data scientist with 8 years of industry experience looking to switch careers into education. Classroom and tutoring experience spanning K–12 and college levels. Comfortable teaching Arithmetic, Algebra, Geometry, \& Calculus. Skilled at executing curriculum plans, creating engaging lesson materials, and communicating effectively with students, parents, and colleagues.
 
-% EXTRA FOR SPECIFIC COMPANIES: Mountain-sport enthusiast: trail running, peak bagging, mountain biking, and backcountry ski touring; Nerd hobbies: linux-boxing, electronics \& soldering, renovating a RAM ProMaster camper-van
 \loose
 \fullline
 
-\section{HIGHLIGHTS}
-
-\begin{itemize}
-	\item \textbf{Expertise}: machine learning, natural language processing (NLP), and statistical analysis
-	\item \textbf{Data Skills}: Querying, cleansing, visualizing, analyzing, predicting, forecasting, testing
-	\item \textbf{Languages}: Python, R, SQL, and Bash
-	\item \textbf{Toolsets}: XGBoost, Sci-Kit Learn, Pandas, TensorFlow, Docker, Prophet, Jupyter Lab, RMarkdown, Snowflake, Presto, BigQuery, SQLAlchemy, Git, GitHub, BitBucket, LookML (Looker)
-\end{itemize}
-\loose
-\fullline
- 
 \section{EXPERIENCE}
 
-% Data Scientist (DEPT Agency)
-\title{Data Scientist}
-\employer{DEPT Agency}
-\dates{Mar 2024 -- 10 mos}
-\location{Remote (Salt Lake City, UT)}
-\begin{position}
-	Marketing data science for DEPT clients. Specialized in search engine ads, forecasting available ad impressions, and creating an ad-spend budgeting tool using prediction models based on historical data.
-
-    \textbf{Key Accomplishments:}
-	\begin{itemize}
-		\item \textbf{Search Engine Ad Impression Forecasting:} Took over responsibility for a TensorFlow ad impression forecasting LSTM model
-		\item \textbf{Ad-Budget Recommendations:} Built an ad-budget recommendation tool using XGBoost ensemble models that demonstrated our client was overspending on ads by \$100Ks in some ad categories
-		\item \textbf{Statistical Consulting:} various colleagues and projects. Gave an internal presentation on $p$-values
-	\end{itemize}
-\end{position}
-
-% ML Scientist (Bed Bath & Beyond)
-\title{ML Scientist}
-\employer{Bed Bath \& Beyond}
-\dates{Aug 2022 -- 1 yr 5 mos}
-\location{Hybrid (Salt Lake City, UT)}
-\begin{position}
-	Promoted to the ML team supporting sponsored ads as the junior scientist specializing in the application of XGBoost ensemble methods, and text embeddings to produce conversion (i.e., purchase) predictions. Proven track record in optimizing models, including testing XGBoost against a VowPal Wabbit production model, resulting in superior log-loss performance. Implemented text embedding, further elevating predictive accuracy.
-
-	\textbf{Key Accomplishments:}
-	\begin{itemize}
-		\item \textbf{Conversion Prediction:} Tested and produced several XGBoost models for conversion prediction that improved log-loss performance compared with Vowpal Wabbit production model
-		\item \textbf{Textual Embeddings:} Integrated embeddings into conversion prediction models. Built a Sci-Kit Learn TFIDF + Singular Value Decomposition (SVD) embedding class and compared model performance improvements with a fastText model. The latter toolset was demonstrated to be the more performant approach.
-	\end{itemize}
-\end{position}
-
-% Senior Data Analyst (Overstock)
-\title{Senior Data Analyst}
-\employer{Overstock}
-\dates{Jun 2019 -- 3 yrs 3 mos}
+\title{Mechanics Instructor}
+\employer{The Bicycle Collective}
+\dates{May 2025 -- Present}
 \location{Salt Lake City, UT}
 \begin{position}
-	\sloppy Supplied analytics and statistical consulting for OSTK's internal search, sponsored products, and recommendations teams \par
-
-	\textbf{Key Accomplishments:}
-	\begin{itemize}
-		\item \textbf{Product Banners}: designed and built the data model that supports Overstock's first data-driven approach to product banner messaging (e.g., "Best Seller", "Top Rated"). In A/B tests against the prior manual system, our banners demonstrated a lift of \$500K in profit annually
-		\item \textbf{Statistical Analysis:} Supplementation of auto-gen. A/B test results with secondary metric $t$-tests, segment breakdowns, and linear models; Statistical consultant for product managers e.g., regarding stat. significance, power, \& sample size
-		\item \textbf{Databases:} Used Presto \& BigQuery SQL every day, comfortable with semi-structured data; Accessed company databases with R \& Python's \texttt{sqlalchemy} for incorporation into advanced analytics (e.g., statistical power, \& financial estimation), SQL scripts tracked with Git, and I administered a BitBucket repository for these scripts for my analytics team
-		\item \textbf{Dashboarding:} Giving non-data colleagues the power to make data-driven decisions; Used LookML or MicroStrategy to build dozens of reports for managers to defend their products and strategize enhancements; tracked various KPIs such as conversion, CTR, friction metrics - exit rate, \& scroll depth
-	\end{itemize}
+	Instructor for the Bicycle Collective's community education program. Involved in course planning, as well as instruction or aiding co-instructors. \textbf{Courses Offered:} Drivetrains, Brakes (rim \& rotor), Bearing Systems, Tubeless Tires, Wheels, Suspension Systems
 \end{position}
 
-\title{BI Analyst I/II}
-\employer{Womply}
-\dates{May 2018 -- 1 yr 2 mos}
-\location{Silicon Slopes, UT}
+\title{Track Coach, RRCA Level I}
+\employer{SLC Track Club}
+\dates{Feb 2022 -- Present}
+\location{Salt Lake City, UT}
 \begin{position}
-	Was promoted to the level-2 role in order to focus on statistical analyses and report writing to answer larger BI questions
-
-	\textbf{Key Accomplishments:}
 	\begin{itemize}
-		\item \textbf{Data Modeling \& Dash-boarding:} Modeled tables, pulled datasets using Presto SQL, AWS Athena, and Snowflake SQL, built Domo reports for various Womply business units
-		\item \textbf{Statistical Analysis:} Statistical  \& graphical analyses using RMarkdown; contributor in large study \textit{How online reviews impact small business revenue}. The results demonstrated that Google ratings are positively correlated to revenue, while Yelp ratings are not. \\
-		\item \textbf{Python Programming:} Managed Python scripts running ETL processes for the Analytics team and the Finance team
+		\item \textbf{Coaching} adult athletes through a pre-planned weekly workout and collaborating with the SLCTC coaching team
+		\item \textbf{Workouts} vary from speed intervals, fartleks, tempo runs, and hill repeats.
+		\item \textbf{Mentor Athletes} on training plans, pre-race ritual, form, recovery, and injury prevention
 	\end{itemize}
 \end{position}
 
-\title{Data Science Intern}
-\employer{New Belgium Brewery}
-\dates{Nov 2017 -- 2 mos}
-\location{Fort Collins, CO}
-\begin{position}
-	An internship and capstone project to conclude the Data Science Immersive program at Galvanize. Designed and implemented a neural network that took chemical measurements of beer batches supplied by New Belgium, and predicted whether a panel of company beer tasters would reject that batch for distribution
-
-	\begin{itemize}
-		\item \textbf{Inebriated Neural Network:} A model with a taste for beer. A multi-layer perceptron (MLP) neural network (\texttt{sklearn}) predicts beer tasters’ disapproval using chemical measurements of New Belgium brew, identified $\sim$\hspace{-1mm}~4 out of 5 test cases when a batch would be rejected by the taste panel. Project URL: github.com/kdonavin/inebriated\_neural\_network
-	\end{itemize}
-\end{position}
-
-\title{Economic Data Analyst}
-\employer{TechLink Center}
-\dates{Jun 2015 -- 2 yrs 1 mo}
+\title{Grad. Teaching \& Research Asst.}
+\employer{Montana State U.}
+\dates{Aug 2013 -- May 2015}
 \location{Bozeman, MT}
 \begin{position}
-Principally involved with TechLink's economic impact studies regarding technology transfer and Small Business Innovation Research (SBIR) contract agreements between the Department of Defense and private industry
+Assistant to MSU faculty in Agricultural Finance, Agricultural Marketing, and Development Economics. Supported teaching and research duties including grading, assignment design, literature collection, and data gathering.
 
-	\textbf{Key Accomplishments:}
+\begin{itemize}
+    \item \textbf{Grading} 400+ essays and homework assignments across undergraduate courses
+    \item \textbf{Course Material Design}: Designed 2 assignments for a Development Economics course
+    \item \textbf{Literature Review}: Collected and organized 40+ journal articles on statistics education and pedagogy
+    \item \textbf{Data Collection}: Gathered raw price data from over 15 Montana grain elevators for related research projects
+\end{itemize}
+\end{position}
+
+\title{Math Instructor}
+\employer{Mathnasium}
+\dates{Feb 2013 -- Jul 2013}
+\location{Salt Lake City}
+\begin{position}
+Tutored small groups (2--5 students) ages 6--18 using individualized Mathnasium curriculum as an extracurricular supplement to regular mathematics instruction.
+\begin{itemize}
+	\item \textbf{Lesson Execution} using Mathnasium curriculum aligned to each student’s learning plan and tracked progress
+	\item \textbf{Dynamic 1-1 Instruction} for a range of abilities and ages
+	\item \textbf{Parent Communication} weekly updates on student progress and areas for improvement
+\end{itemize}
+\end{position}
+
+\title{Freelance Private Tutor}
+\employer{Self-Employed}
+\dates{Jan 2013 -- Jul 2013}
+\location{Salt Lake City}
+\begin{position}
+	Provided one-on-one and small-group tutoring in Calculus, Algebra, and GRE quantitative preparation for students at the high-school and college levels.
 	\begin{itemize}
-		\item \textbf{Data Wrangling:} Cleaned records with R, queried records from a Django database from 25,000 company survey records of DoD contractors and grant award winners
-		\item \textbf{Statistical Consultant \& Editor:} For 3 of TechLink’s economic impact studies of DoD Small Business Innovation Research (SBIR) programs and licensing activity, the DoD used this research to defend program funding in front of the U.S. Congress
-		\item \textbf{Independent Research:} linearly modeled the factors influencing commercialization within Air Force \& Navy SBIR programs including company size, experience in the program, location in the US, and age of the small business grant
+		\item \textbf{Lesson Planning:} to target student weaknesses in specific math topics
+		\item \textbf{Standardized Exams:}Prepared students for standardized exams with focused quantitative strategies
 	\end{itemize}
+\end{position}
+
+\title{Math Tutor}
+\employer{Westminster College}
+\dates{Jan 2012 -- Dec 2012}
+\location{Salt Lake City}
+\begin{position}
+Tutored groups of 1--3 college students in College Algebra, Statistics, and Single-Variable Calculus; assisted with homework, exam preparation, and conceptual understanding.
 \end{position}
 
 \loose
@@ -167,7 +138,7 @@ Principally involved with TechLink's economic impact studies regarding technolog
 
 \section{EDUCATION}
 
-\textbf{Data Science Immersive Certificate -- Dec 2017 -- Galvanize, Inc. -- Boulder, CO}
+\textbf{Course Highlights}: Single/Multivar Calc, Discrete Math, Linear Algebra, Math Stats, Prob Theory, Real Analysis, Mathematical Econ
 
 \textbf{M.S. of Applied Economics -- May 2015 -- Montana State University --  Bozeman, MT}
 
