added awards, and a rough summary

--- a/ALT/kirkwood-donavin-resume__sport.tex
+++ b/ALT/kirkwood-donavin-resume__sport.tex
@@ -35,7 +35,7 @@
 	
 \begin{document}
 \name{
-	KIRKWOOD P. DONAVIN -- EDUCATOR
+	KIRKWOOD P. DONAVIN -- COACH
 }
 % \tagline{Former data scientist -- Passionate about mathematics \& education}
 \address{
@@ -58,20 +58,12 @@
 
 \section{SUMMARY}
 
-Former data scientist with 8 years of industry experience looking to switch careers into education. Classroom and tutoring experience spanning K–12 and college levels. Comfortable teaching Arithmetic, Algebra, Geometry, \& Calculus. Skilled at executing curriculum plans, creating engaging lesson materials, and communicating effectively with students, parents, and colleagues.
+EDIT Enthusiastic about mountain sports: trail running, summiting, mountaineering, ski touring, ski resort days with buddies, skate skiing, multi-pitch trad routes, climbing gym days with a pal, all-mountain bike riding. Experienced coach with a passion for helping others achieve their fitness and performance goals. Strong background in training plan development, technique analysis, and motivation strategies. Excellent communication skills and ability to build rapport with athletes of all levels.
 
 \loose
 \fullline
 
 \section{EXPERIENCE}
-
-\title{Mechanics Instructor}
-\employer{The Bicycle Collective}
-\dates{May 2025 -- Present}
-\location{Salt Lake City, UT}
-\begin{position}
-	Instructor for the Bicycle Collective's community education program. Involved in course planning, as well as instruction or aiding co-instructors. \textbf{Courses Offered:} Drivetrains, Brakes (rim \& rotor), Bearing Systems, Tubeless Tires, Wheels, Suspension Systems
-\end{position}
 
 \title{Track Coach, RRCA Level I}
 \employer{SLC Track Club}
@@ -85,60 +77,21 @@ Former data scientist with 8 years of industry experience looking to switch care
 	\end{itemize}
 \end{position}
 
-\title{Grad. Teaching \& Research Asst.}
-\employer{Montana State U.}
-\dates{Aug 2013 -- May 2015}
-\location{Bozeman, MT}
+\title{Mechanics Instructor}
+\employer{The Bicycle Collective}
+\dates{May 2025 -- Present}
+\location{Salt Lake City, UT}
 \begin{position}
-Assistant to MSU faculty in Agricultural Finance, Agricultural Marketing, and Development Economics. Supported teaching and research duties including grading, assignment design, literature collection, and data gathering.
-
-\begin{itemize}
-    \item \textbf{Grading} 400+ essays and homework assignments across undergraduate courses
-    \item \textbf{Course Material Design}: Designed 2 assignments for a Development Economics course
-    \item \textbf{Literature Review}: Collected and organized 40+ journal articles on statistics education and pedagogy
-    \item \textbf{Data Collection}: Gathered raw price data from over 15 Montana grain elevators for related research projects
-\end{itemize}
+	Instructor for the Bicycle Collective's community education program. Involved in course planning, as well as instruction or aiding co-instructors. \textbf{Courses Offered:} Drivetrains, Brakes (rim \& rotor), Bearing Systems, Tubeless Tires, Wheels, Suspension Systems
 \end{position}
 
-\title{Math Instructor}
-\employer{Mathnasium}
-\dates{Feb 2013 -- Jul 2013}
-\location{Salt Lake City}
-\begin{position}
-Tutored small groups (2--5 students) ages 6--18 using individualized Mathnasium curriculum as an extracurricular supplement to regular mathematics instruction.
-\begin{itemize}
-	\item \textbf{Lesson Execution} using Mathnasium curriculum aligned to each student’s learning plan and tracked progress
-	\item \textbf{Dynamic 1-1 Instruction} for a range of abilities and ages
-	\item \textbf{Parent Communication} weekly updates on student progress and areas for improvement
-\end{itemize}
-\end{position}
-
-\title{Freelance Private Tutor}
-\employer{Self-Employed}
-\dates{Jan 2013 -- Jul 2013}
-\location{Salt Lake City}
-\begin{position}
-	Provided one-on-one and small-group tutoring in Calculus, Algebra, and GRE quantitative preparation for students at the high-school and college levels.
-	\begin{itemize}
-		\item \textbf{Lesson Planning:} to target student weaknesses in specific math topics
-		\item \textbf{Standardized Exams:}Prepared students for standardized exams with focused quantitative strategies
-	\end{itemize}
-\end{position}
-
-\title{Math Tutor}
-\employer{Westminster College}
-\dates{Jan 2012 -- Dec 2012}
-\location{Salt Lake City}
-\begin{position}
-Tutored groups of 1--3 college students in College Algebra, Statistics, and Single-Variable Calculus; assisted with homework, exam preparation, and conceptual understanding.
-\end{position}
 
 \loose
 \fullline
 
 \section{EDUCATION}
 
-\textbf{Course Highlights}: Single/Multivar Calc, Discrete Math, Linear Algebra, Math Stats, Prob Theory, Real Analysis, Mathematical Econ
+\textbf{Course Highlights}: Outdoor Leadership, Wilderness First Aid, Rec. Avalance Safety I \& II (American Avalance Institute)
 
 \textbf{M.S. of Applied Economics -- May 2015 -- Montana State University --  Bozeman, MT}
 
@@ -148,6 +101,23 @@ Tutored groups of 1--3 college students in College Algebra, Statistics, and Sing
 }
 
 \textbf{B.A of International Relations -- May 2011 -- Cornell College -- Mount Vernon, IA}
+
+\loose
+\fullline
+
+\section{AWARDS}
+
+\begin{multicols}{2}
+\begin{itemize}
+    \item NCAA DIII All-American (Mile Race, 3rd Place, 2011)
+	\item Overall-Series Champion -- Cirque Series -- Sport Division -- 2021
+	\item 2nd Place Overall-Series -- Wasatch Trail Series (Short Course) -- 2021
+	\item 2011 Iowa Intercollegiate Athletic Conference (IIAC) MVP in Track \& Field
+    \item 6x IIAC Champion (Events: 800m, 1500m, Mile, DMR; 2010 \& 2011 track seasons)
+	\item 2011 Sportsman of the Year -- Cornell College
+    \item 3x School Record Holder -- Cornel College (Events: 4x800m, DMR, Mile)
+\end{itemize}
+\end{multicols}
 
 \end{resume}
 \end{document}
